--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "sei-project-two",
+  "name": "sei-project-2",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://worldfood.guide/api/",
   "dependencies": {
+    "axios": "^0.21.1",
+    "bulma": "^0.9.3",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "react": "^17.0.2",
