--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "bulma": "^0.9.3",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "netlify-cli": "^6.9.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "sass": "^1.37.5"
+    "sass": "^1.37.5",
+    "serve": "^12.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
