--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "netlify-cli": "^6.9.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "sass": "^1.37.5",
     "serve": "^12.0.1"
